--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.22)
+cmake_minimum_required(VERSION 3.17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -11,7 +11,6 @@ add_executable(unholy-grounds ${SOURCE_FILES})
 
 find_package(glfw3 3.3 REQUIRED)
 find_package(OpenGL REQUIRED COMPONENTS OpenGL)
-find_package(assimp REQUIRED)
 
 add_dependencies(unholy-grounds OpenGL::OpenGL)
 
@@ -19,3 +18,4 @@ include_directories(${PROJECT_SOURCE_DIR}/include)
 
 target_link_libraries(unholy-grounds glfw)
 target_link_libraries(unholy-grounds OpenGL::OpenGL)
+target_link_libraries(unholy-grounds ${CMAKE_DL_LIBS})
